wxcl/src/misc/cffi/wxExtra.lisp

;;;wxExtra.lisp
;;;License  : wxWindows License 3.1
;;;Author(s) : Surendra Singhi (surendra@asu.edu) 
;;;Copyright (C) 2005 Surendra Singhi 
;;;See the file LICENSE for information on usage and redistribution.
;;;
;;; $Header$
;;;

(in-package :wxcl-misc)

(defcfun ("expEVT_DELETE" expEVT_DELETE) :int)

(defcfun ("expEVT_HTML_CELL_CLICKED" expEVT_HTML_CELL_CLICKED) :int)

(defcfun ("expEVT_HTML_CELL_MOUSE_HOVER" expEVT_HTML_CELL_MOUSE_HOVER) :int)

(defcfun ("expEVT_HTML_LINK_CLICKED" expEVT_HTML_LINK_CLICKED) :int)

(defcfun ("expEVT_HTML_SET_TITLE" expEVT_HTML_SET_TITLE) :int)

(defcfun ("expEVT_INPUT_SINK" expEVT_INPUT_SINK) :int)

(defcfun ("expEVT_SORT" expEVT_SORT) :int)

(defcfun ("expEVT_COMMAND_LIST_CACHE_HINT" expEVT_COMMAND_LIST_CACHE_HINT) :int)

(defcfun ("expEVT_COMMAND_LIST_COL_RIGHT_CLICK" expEVT_COMMAND_LIST_COL_RIGHT_CLICK) :int)

(defcfun ("expEVT_COMMAND_LIST_COL_BEGIN_DRAG" expEVT_COMMAND_LIST_COL_BEGIN_DRAG) :int)

(defcfun ("expEVT_COMMAND_LIST_COL_DRAGGING" expEVT_COMMAND_LIST_COL_DRAGGING) :int)

(defcfun ("expEVT_COMMAND_LIST_COL_END_DRAG" expEVT_COMMAND_LIST_COL_END_DRAG) :int)

(defcvar ("m_closure" m_closure)
 :pointer)

(defcfun ("Connect" Connect) :void
  (closure :pointer))

(defcfun ("GetClosure" GetClosure) :pointer)

(defcfun ("Notify" Notify) :void)

(defcvar ("wxInputSink" wxInputSink)
 :pointer)

(defcvar ("m_buffer" m_buffer)
 :string)

(defcvar ("m_bufferLen" m_bufferLen)
 :pointer)

(defcvar ("m_lastRead" m_lastRead)
 :pointer)

(defcvar ("m_lastError" m_lastError)
 :pointer)

(defcfun ("Read" Read) :void
  (input :pointer))

(defcfun ("Clone" Clone) :pointer)

(defcfun ("LastError" LastError) :pointer)

(defcfun ("LastRead" LastRead) :int)

(defcfun ("LastInput" LastInput) :lisp-string)

(defcvar ("m_evtHandler" m_evtHandler)
 :pointer)

(defcvar ("m_input" m_input)
 :pointer)

(defcvar ("m_event" m_event)
 :pointer)

(defcfun ("Entry" Entry) :pointer)

(defcfun ("GetId" GetId) :int)

(defcfun ("Start" Start) :void)

(defcfun ("OnCellClicked" OnCellClicked) :void
  (cell :pointer)
  (x :pointer)
  (y :pointer)
  (event :pointer))

(defcfun ("OnCellMouseHover" OnCellMouseHover) :void
  (cell :pointer)
  (x :pointer)
  (y :pointer))

(defcfun ("OnLinkClicked" OnLinkClicked) :void
  (link :pointer))

(defcfun ("OnOpeningURL" OnOpeningURL) :pointer
  (type :pointer)
  (url :pointer)
  (redirect :pointer))

(defcfun ("OnSetTitle" OnSetTitle) :void
  (title :pointer))

(defcvar ("m_mouseEvent" m_mouseEvent)
 :pointer)

(defcvar ("m_htmlCell" m_htmlCell)
 :pointer)

(defcvar ("m_linkInfo" m_linkInfo)
 :pointer)

(defcvar ("m_logicalPosition" m_logicalPosition)
 :pointer)

(defcfun ("GetMouseEvent" GetMouseEvent) :pointer)

(defcfun ("GetHtmlCell" GetHtmlCell) :pointer)

(defcfun ("GetHtmlCellId" GetHtmlCellId) :pointer)

(defcfun ("GetHref" GetHref) :pointer)

(defcfun ("GetTarget" GetTarget) :pointer)

(defcfun ("GetLogicalPosition" GetLogicalPosition) :pointer)

(defcfun ("Create" Create) :void
  (parent :pointer)
  (id :pointer)
  (evtHandler :pointer))

(defcvar ("defineDefs" defineDefs)
 :pointer)

(defcvar ("useDefs" useDefs)
 :pointer)

(defcfun ("wxVersionNumber" wxVersionNumber) :int)

(defcfun ("wxIsDefined" wxIsDefined) :int
  (s :string))

(defcfun ("wxcMalloc" wxcMalloc) :pointer
  (size :int))

(defcfun ("wxcFree" wxcFree) :void
  (p :pointer))

(defcfun ("wxcSystemSettingsGetColour" wxcSystemSettingsGetColour) :pointer
  (systemColour :int))

(defcfun ("wxcWakeUpIdle" wxcWakeUpIdle) :void)

(defcfun ("wxCursor_Delete" wxCursor_Delete) :void
  (_obj :pointer))

(defcfun ("wxDateTime_Delete" wxDateTime_Delete) :void
  (_obj :pointer))

(defcfun ("wxFrame_GetTitle" wxFrame_GetTitle) :lisp-string
  (_obj :pointer))

(defcfun ("wxFrame_SetTitle" wxFrame_SetTitle) :void
  (_obj :pointer)
  (_txt :string))

(defcfun ("wxFrame_SetShape" wxFrame_SetShape) :pointer
  (self :pointer)
  (region :pointer))

(defcfun ("wxFrame_ShowFullScreen" wxFrame_ShowFullScreen) :pointer
  (self :pointer)
  (show :pointer)
  (style :int))

(defcfun ("wxFrame_IsFullScreen" wxFrame_IsFullScreen) :pointer
  (self :pointer))

(defcfun ("wxFrame_Centre" wxFrame_Centre) :void
  (self :pointer)
  (orientation :int))

(defcfun ("wxNotebook_AssignImageList" wxNotebook_AssignImageList) :void
  (_obj :pointer)
  (imageList :pointer))

(defcfun ("wxMenu_GetMenuBar" wxMenu_GetMenuBar) :pointer
  (_obj :pointer))

(defcfun ("wxMenuBar_GetFrame" wxMenuBar_GetFrame) :pointer
  (_obj :pointer))

(defcfun ("wxToolBar_AddTool2" wxToolBar_AddTool2) :void
  (_obj :pointer)
  (toolId :int)
  (label :string)
  (bmp :pointer)
  (bmpDisabled :pointer)
  (itemKind :int)
  (shortHelp :string)
  (longHelp :string))

(defcfun ("wxListEvent_GetCacheFrom" wxListEvent_GetCacheFrom) :int
  (_obj :pointer))

(defcfun ("wxListEvent_GetCacheTo" wxListEvent_GetCacheTo) :int
  (_obj :pointer))

(defcfun ("wxListCtrl_AssignImageList" wxListCtrl_AssignImageList) :void
  (_obj :pointer)
  (images :pointer)
  (which :int))

(defcfun ("wxListCtrl_GetColumn2" wxListCtrl_GetColumn2) :void
  (_obj :pointer)
  (col :int)
  (item :pointer))

(defcfun ("wxListCtrl_GetItem2" wxListCtrl_GetItem2) :void
  (_obj :pointer)
  (info :pointer))

(defcfun ("wxListCtrl_GetItemPosition2" wxListCtrl_GetItemPosition2) :void
  (_obj :pointer)
  (item :int)
  (x :int)
  (y :int))

(defcstruct SortData

	(id :long)
	(closure :pointer))

(defcfun ("wxListCtrl_SortItems2" wxListCtrl_SortItems2) :int
  (_obj :pointer)
  (closure :pointer))

(defcfun ("wxDC_GetPixel2" wxDC_GetPixel2) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (col :pointer))

(defcfun ("wxObject_IsKindOf" wxObject_IsKindOf) :int
  (_obj :pointer)
  (classInfo :pointer))

(defcfun ("wxObject_GetClassInfo" wxObject_GetClassInfo) :pointer
  (_obj :pointer))

(defcfun ("wxObject_IsScrolledWindow" wxObject_IsScrolledWindow) :int
  (_obj :pointer))

(defcfun ("wxObject_Delete" wxObject_Delete) :void
  (_obj :pointer))

(defcfun ("wxString_Create" wxString_Create) :pointer
  (buffer :string))

(defcfun ("wxString_CreateLen" wxString_CreateLen) :pointer
  (buffer :string)
  (len :int))

(defcfun ("wxString_Delete" wxString_Delete) :void
  (s :pointer))

(defcfun ("wxString_GetString" wxString_GetString) :int
  (s :pointer)
  (buffer :string))

(defcfun ("wxClassInfo_FindClass" wxClassInfo_FindClass) :pointer
  (_txt :string))

(defcfun ("wxClassInfo_GetClassNameEx" wxClassInfo_GetClassNameEx) :lisp-string
  (_obj :pointer))

(defcfun ("wxClassInfo_GetBaseClassName1" wxClassInfo_GetBaseClassName1) :lisp-string
  (_obj :pointer))

(defcfun ("wxClassInfo_GetBaseClassName2" wxClassInfo_GetBaseClassName2) :lisp-string
  (_obj :pointer))

(defcfun ("wxClassInfo_IsKindOfEx" wxClassInfo_IsKindOfEx) :int
  (_obj :pointer)
  (classInfo :pointer))

(defcfun ("wxClassInfo_GetSize" wxClassInfo_GetSize) :int
  (_obj :pointer))

(defcfun ("wxWindow_ConvertPixelsToDialogEx" wxWindow_ConvertPixelsToDialogEx) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (_x :int)
  (_y :int))

(defcfun ("wxWindow_ConvertDialogToPixelsEx" wxWindow_ConvertDialogToPixelsEx) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (_x :int)
  (_y :int))

(defcfun ("wxWindow_SetClientObject" wxWindow_SetClientObject) :void
  (_obj :pointer)
  (obj :pointer))

(defcfun ("wxWindow_SetVirtualSize" wxWindow_SetVirtualSize) :void
  (_obj :pointer)
  (w :int)
  (h :int))

(defcfun ("wxWindow_GetVirtualSize" wxWindow_GetVirtualSize) :void
  (_obj :pointer)
  (w :int)
  (h :int))

(defcfun ("wxWindow_FitInside" wxWindow_FitInside) :void
  (_obj :pointer))

(defcfun ("wxWindow_ClientToScreen" wxWindow_ClientToScreen) :void
  (self :pointer)
  (x :int)
  (y :int)
  (sx :int)
  (sy :int))

(defcfun ("wxWindow_ScreenToClient2" wxWindow_ScreenToClient2) :void
  (self :pointer)
  (x :int)
  (y :int)
  (cx :int)
  (cy :int))

(defcfun ("wxcGetMousePosition" wxcGetMousePosition) :void
  (x :int)
  (y :int))

(defcfun ("wxScrolledWindow_SetScrollRate" wxScrolledWindow_SetScrollRate) :void
  (_obj :pointer)
  (xstep :int)
  (ystep :int))

(defcfun ("wxMouseEvent_GetWheelDelta" wxMouseEvent_GetWheelDelta) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_GetWheelRotation" wxMouseEvent_GetWheelRotation) :int
  (_obj :pointer))

(defcfun ("wxMouseEvent_GetButton" wxMouseEvent_GetButton) :int
  (_obj :pointer))

(defcfun ("expEVT_MOUSEWHEEL" expEVT_MOUSEWHEEL) :int)

(defcfun ("wxDC_GetUserScaleX" wxDC_GetUserScaleX) :double
  (dc :pointer))

(defcfun ("wxDC_GetUserScaleY" wxDC_GetUserScaleY) :double
  (dc :pointer))

(defcfun ("wxTimerEx_Create" wxTimerEx_Create) :pointer)

(defcfun ("wxTimerEx_Connect" wxTimerEx_Connect) :void
  (_obj :pointer)
  (_closure :pointer))

(defcfun ("wxTimerEx_GetClosure" wxTimerEx_GetClosure) :pointer
  (_obj :pointer))

(defcfun ("wxProcess_IsErrorAvailable" wxProcess_IsErrorAvailable) :int
  (_obj :pointer))

(defcfun ("wxProcess_IsInputAvailable" wxProcess_IsInputAvailable) :int
  (_obj :pointer))

(defcfun ("wxProcess_IsInputOpened" wxProcess_IsInputOpened) :int
  (_obj :pointer))

(defcfun ("wxProcess_Open" wxProcess_Open) :pointer
  (cmd :string)
  (flags :int))

(defcfun ("wxKill" wxKill) :pointer
  (pid :int)
  (signal :pointer))

(defcfun ("wxStreamBase_Delete" wxStreamBase_Delete) :void
  (stream :pointer))

(defcfun ("wxTextCtrl_EmulateKeyPress" wxTextCtrl_EmulateKeyPress) :int
  (_obj :pointer)
  (keyevent :pointer))

(defcfun ("wxTextCtrl_GetStyle" wxTextCtrl_GetStyle) :int
  (_obj :pointer)
  (pos :long)
  (style :pointer))

(defcfun ("wxTextCtrl_GetDefaultStyle" wxTextCtrl_GetDefaultStyle) :pointer
  (_obj :pointer))

(defcfun ("wxTextCtrl_GetRange" wxTextCtrl_GetRange) :lisp-string
  (_obj :pointer)
  (from :long)
  (to :long))

(defcfun ("wxTextCtrl_GetStringSelection" wxTextCtrl_GetStringSelection) :lisp-string
  (_obj :pointer))

(defcfun ("wxTextCtrl_IsMultiLine" wxTextCtrl_IsMultiLine) :int
  (_obj :pointer))

(defcfun ("wxTextCtrl_IsSingleLine" wxTextCtrl_IsSingleLine) :int
  (_obj :pointer))

(defcfun ("wxTextCtrl_SetDefaultStyle" wxTextCtrl_SetDefaultStyle) :int
  (_obj :pointer)
  (style :pointer))

(defcfun ("wxTextCtrl_SetMaxLength" wxTextCtrl_SetMaxLength) :void
  (_obj :pointer)
  (len :long))

(defcfun ("wxTextCtrl_SetStyle" wxTextCtrl_SetStyle) :int
  (_obj :pointer)
  (start :long)
  (end :long)
  (style :pointer))

(defcfun ("wxTextAttr_CreateDefault" wxTextAttr_CreateDefault) :pointer)

(defcfun ("wxTextAttr_Create" wxTextAttr_Create) :pointer
  (colText :pointer)
  (colBack :pointer)
  (font :pointer))

(defcfun ("wxTextAttr_Delete" wxTextAttr_Delete) :void
  (_obj :pointer))

(defcfun ("wxTextAttr_GetBackgroundColour" wxTextAttr_GetBackgroundColour) :pointer
  (_obj :pointer))

(defcfun ("wxTextAttr_GetFont" wxTextAttr_GetFont) :pointer
  (_obj :pointer))

(defcfun ("wxTextAttr_GetTextColour" wxTextAttr_GetTextColour) :pointer
  (_obj :pointer))

(defcfun ("wxTextAttr_HasBackgroundColour" wxTextAttr_HasBackgroundColour) :int
  (_obj :pointer))

(defcfun ("wxTextAttr_HasFont" wxTextAttr_HasFont) :int
  (_obj :pointer))

(defcfun ("wxTextAttr_HasTextColour" wxTextAttr_HasTextColour) :int
  (_obj :pointer))

(defcfun ("wxTextAttr_IsDefault" wxTextAttr_IsDefault) :int
  (_obj :pointer))

(defcfun ("wxTextAttr_SetTextColour" wxTextAttr_SetTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxTextAttr_SetBackgroundColour" wxTextAttr_SetBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(defcfun ("wxTextAttr_SetFont" wxTextAttr_SetFont) :void
  (_obj :pointer)
  (font :pointer))

(defcfun ("wxProgressDialog_Create" wxProgressDialog_Create) :pointer
  (title :string)
  (message :string)
  (max :int)
  (parent :pointer)
  (style :int))

(defcfun ("wxProgressDialog_Update" wxProgressDialog_Update) :int
  (obj :pointer)
  (value :int)
  (message :string))

(defcfun ("wxProgressDialog_Resume" wxProgressDialog_Resume) :void
  (obj :pointer))
